<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="24dp"
            android:background="@color/teal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textStyle="italic"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:layout_below="@+id/title"/>
            <EditText
                android:id="@+id/item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:layout_below="@+id/item_name"/>
            <EditText
                android:id="@+id/item_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                android:layout_below="@+id/item_quantity"/>
            <EditText
                android:id="@+id/item_size"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:layout_below="@+id/item_color"/>
            <EditText
                android:id="@+id/item_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand"
                android:layout_below="@+id/item_size"/>
            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_brand"
                android:layout_marginEnd="5dp"
                android:text="SAVE"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/teal"
                android:background="@color/colorAccent"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>