<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">
            <TextView
                android:id="@+id/confirm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:textColor="@color/dark_red"
                android:fontFamily="sans-serif-black"
                android:padding="4dp"/>

            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:background="@color/light_red"
                android:text="@string/yes_button_text"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/light_red"
                android:text="@string/no_button_text"
                android:layout_marginRight="40dp"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>