<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">
            <TextView
                android:id="@+id/confirm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_centerHorizontal="true"
                android:textSize="18dp"
                android:textColor="@color/dark_red"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:padding="4dp"/>

            <Button
                android:id="@+id/proceed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@color/light_red"
                android:text="@string/proceed_button_text"
                android:textColor="@android:color/white"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/light_red"
                android:text="@string/cancel_button_text"
                android:layout_below="@+id/proceed_button"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:textStyle="normal" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>