<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp"
        android:outlineSpotShadowColor="@color/yellow_mild">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cherry_swash_bold"
                android:textColor="@color/dark_red"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:paddingTop="5dp"
                android:text="@string/quantity"
                android:textSize="18dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quantity"
                android:paddingTop="5dp"
                android:text="@string/color"
                android:textSize="18dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color"
                android:paddingTop="5dp"
                android:text="@string/brand"
                android:textSize="18dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brand"
                android:paddingTop="5dp"
                android:text="@string/size"
                android:textSize="18dp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/size"
                android:paddingTop="5dp"
                android:textSize="16dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/blank"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="4dp">

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:width="20dp"
                    android:height="20dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:width="20dp"
                    android:height="20dp"
                    android:background="@android:drawable/ic_delete" />


            </TableRow>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:visibility="gone"
                android:layout_alignParentRight="true" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>